@@ -3,6 +3,8 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 ============================================================================
 
 Version 6.6.1 - not yet released
+* devices
+  - indicate duplicate devices in list
 
 Version 6.6 - 2013/04/23
 * map
